--- a/info_us/css/style.css
+++ b/info_us/css/style.css
@@ -204,10 +204,11 @@ nav {
   grid-row: 1 / 2;
 }
 .swiper-info__item {
-  width: 150px;
+  width: 200px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin-left: 20px;
 }
 .swiper-info__item span{
   /* display: block; */
@@ -215,6 +216,6 @@ nav {
   /* height: 50px; */
 }
 .swiper-info__item img{
-  width: 25px;
-  height: 25px;
+  width: 24px;
+  height: 24px;
 }
